[2014-??-??] - Version 1.0
	* Added ExcelBook::packDateValues() method for generating Excel date value

[2013-11-18] - Version 0.9.9
	* Added ExcelBook::IsDate1904/ExcelBook::ISetDate1904 methods to set/retrieve base date format
	* Allow compilation against LibXL 3.5.3
	* Fixed bug with parameter order inside setNamedRange method (jacksonja)

[2012-12-31] - Version 0.9.8
	* Allow compilation against LibXL 3.4
	* Updated addPictureScaled() and addPictureDim() to support optional x/y offset parameters

[2012-10-16] - Version 0.9.7
	* Updated INFO section of the extension to show libXL version
	* Added new methods (requires LibXL 3.2.4+):
		- added ExcelSheet::getTopLeftView() and ExcelSheet::setTopLeftView() methods for getting/setting a view position in the sheet
		- added ExcelSheet::addrToRowCol() and ExcelSheet::rowColToAddr() methods for translating Excel cell position to row/column definitions

[2011-10-12] - Version 0.9.6
	* Added new methods (requires LibXL 3.2.3+):
		- ExcelSheet::isHidden() that whether sheet is hidden.
		- ExcelSheet::setHidden(bool flag) that hides/unhides the sheet.
	* Allow compilation against LibXL 3.2.3/3.2.2
	* Added a work-around for image index bug inside LibXL 3.2.2

[2011-08-03] - Version 0.9.1
	* Added new methods (requires LibXL 3.2.0+):
		- ExcelSheet::setPrintFit(int wPages, int hPages) that fits sheet width and sheet height to wPages and hPages respectively
		- ExcelSheet::getPrintFit() that returns whether fit to page option is enabled, and if so to what width & height
		- ExcelSheet::getNamedRange(string name) that gets the named range coordianates by name, returns false if range is not found
		- ExcelSheet::getIndexRange(int index) that gets the named range coordianates by index, returns false if range is not found
		- ExcelSheet::namedRangeSize() that returns the number of named ranges in the sheet
		- ExcelSheet::getVerPageBreak(int index) that returns column with vertical page break at position index